# vibe_ecs

./: CMakeLists.txt  opencode.json
bench/: CMakeLists.txt  bench_vibe_ecs.cpp  sparse-set-bench.cpp  vibe_ecs_bench.cpp
include/: archetype-chunk.hpp  archetype.hpp  entity.hpp  sparse-set.hpp  vibe-ecs.h  vibe-ecs.hpp
instructions/: 001_cpp_naming_conventions.md
src/: vibe-ecs.cpp
tests/: CMakeLists.txt  archetype_chunk_test.cpp  archetype_test.cpp  sparse_set_test.cpp  test_vibe_ecs.cpp  vibe_ecs_test.cpp
